--- a/configs/person/vit_promptsg.yml
+++ b/configs/person/vit_promptsg.yml
@@ -7,7 +7,7 @@ MODEL:
   PROMPTSG:
     LAMBDA_SUPCON: 0.5
     PROMPT_MODE: 'composed'
-    TEMPERATURE: 1.0
+    TEMPERATURE: 0.07
     CROSS_ATTN_HEADS: 8
     POST_CA_BLOCKS: 2
 
@@ -32,7 +32,7 @@ SOLVER:
     IMS_PER_BATCH: 64
     OPTIMIZER_NAME: 'Adam'
     MAX_EPOCHS: 60
-    BASE_LR_VISUAL: 0.000005
+    BASE_LR_VISUAL: 0.000001
     BASE_LR_NEW: 0.00005
     WEIGHT_DECAY: 0.0001
     STEPS: [20, 40]
@@ -40,6 +40,8 @@ SOLVER:
     CHECKPOINT_PERIOD: 60
     LOG_PERIOD: 50
     EVAL_PERIOD: 60
+    WARMUP_EPOCHS: 5
+    WARMUP_LR_INIT: 0.000001
 
 TEST:
   IMS_PER_BATCH: 64
